updated zerodha app completely

--- a/week-0/zerodha-app/index.html
+++ b/week-0/zerodha-app/index.html
@@ -1,9 +1,58 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Zerodha</title>
+    <title>Zerodha app</title>
   </head>
   <body>
-    <h1>Hello Zerodha s</h1>
+    <div
+      style="display: flex; justify-content: space-between; margin: 20px 100px"
+    >
+      <div>
+        <img
+          src="./img/logo.svg"
+          alt="logo"
+          style="height: 40px; width: 160px"
+        />
+      </div>
+      <div style="display: flex; gap: 20px">
+        <span style="cursor: pointer"> Sign up </span>
+        <span style="cursor: pointer"> About Us </span>
+        <span style="cursor: pointer"> Products </span>
+        <span style="cursor: pointer"> pricing </span>
+        <span style="cursor: pointer"> Support </span>
+      </div>
+    </div>
+    <div style="display: flex; justify-content: center">
+      <img
+        src="./img/landing.png"
+        style="height: 400px; width: 450px"
+        alt="img"
+      />
+    </div>
+    <div
+      style="
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      <h1 style="font-weight: bold">Invest in everything</h1>
+      <p>
+        Online platform to invest in stocks, derivatives, mutual funds, and more
+      </p>
+      <button
+        style="
+          padding: 10px;
+          margin: 10px 0px;
+          background-color: #378ed1;
+          border: none;
+          border-radius: 10px;
+          cursor: pointer;
+        "
+      >
+        Signup now
+      </button>
+    </div>
   </body>
 </html>
